c++: decltype of (by-value captured reference) [PR79620]

Bootstrapped and regtested on x86_64-pc-linux-gnu, does this look
OK for trunk?

-- >8 --

The capture decltype handling in finish_decltype_type wasn't looking
through implicit INDIRECT_REF (added by convert_from_reference), which
caused us to incorrectly resolve decltype((x)) to float& below.

We still don't fully accept the example ultimately because when
processing the decltype inside the first lambda's trailing return type,
we're in lambda type scope but not yet in lambda function scope that
the check looks for, which seems like an orthogonal bug.

	PR c++/79620

gcc/cp/ChangeLog:

	* cp-tree.h (STRIP_REFERENCE_REF): Define.
	* semantics.cc (finish_decltype_type): Use it to look
	through implicit INDIRECT_REF when deciding whether to
	call capture_decltype.

gcc/testsuite/ChangeLog:

	* g++.dg/cpp0x/lambda/lambda-decltype3.C: New test.